<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="action_settings">Settings</string>
    <string name="crime_title_hint">Enter a title for this crime.</string>
	<string name="crime_title_label">Title</string>
	<string name="crime_details_label">Details</string>
	<string name="crime_solved_label">Solved?</string>
	<string name="crimes_title">Crimes</string>
	<string name="date_picker_title">Date of crime:</string>
	<string name="new_crime">New Crime</string>
	<string name="show_subtitle">Show Subtitle</string>
	<string name="hide_subtitle">Hide Subtitle</string>
	<string name="subtitle">If you see something, say something.</string>
	<string name="delete_crime">Delete</string>
	<string name="take">Take!</string>
	<string name="image_button">Image Button</string>
	<string name="image_view">Captured Image</string>
	<string name="crime_suspect_text">Choose Suspect</string>
	<string name="crime_report_text">Send Crime Report</string>
	<string name="crime_report">%1$s! The crime was discovered on %2$s. %3$s, and %4$s </string>
	<string name="crime_report_solved">The case is solved</string>
	<string name="crime_report_unsolved">The case is not solved</string>
	<string name="crime_report_no_suspect">There is no suspect.</string>
	<string name="crime_report_suspect">The suspect is %s.</string>
	<string name="crime_report_subject">CriminalIntent Crime Report</string>
	<string name="send_report">Send crime report via</string>
</resources>
